--- a/src/index.scss
+++ b/src/index.scss
@@ -11,8 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1280px;
+  margin: 0 auto;
 }
-
 a {
   font-weight: 500;
   color: #646cff;
