--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,6 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
   max-width: 1280px;
   margin: 0 auto;
+}
+html{
+  height: 100%;
 }
 a {
   font-weight: 500;
